[gd_scene load_steps=2 format=3 uid="uid://c3cfj5n5yt2ni"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_yvn4k"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvn4k")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "설정"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VolumeControl" type="HBoxContainer" parent="Panel/VBoxContainer/SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/SettingsContainer/VolumeControl"]
layout_mode = 2
text = "음량"

[node name="VolumeSlider" type="HSlider" parent="Panel/VBoxContainer/SettingsContainer/VolumeControl"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 1.0

[node name="TextSpeedControl" type="HBoxContainer" parent="Panel/VBoxContainer/SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/SettingsContainer/TextSpeedControl"]
layout_mode = 2
text = "텍스트 속도"

[node name="TextSpeedSlider" type="HSlider" parent="Panel/VBoxContainer/SettingsContainer/TextSpeedControl"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "저장하기"

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "불러오기"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "닫기" 